doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Trilo\OneDrive\Desktop\FIT5136_S2_2019_77\FIT5136_S2_2019_77
-d
C:\Users\Trilo\OneDrive\Desktop\FIT5136_S2_2019_77\FIT5136_S2_2019_77\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Trilo\OneDrive\Desktop\FIT5136_S2_2019_77\FIT5136_S2_2019_77\PrimeEvents.java
<---- end of javadoc command ---->
Loading source file C:\Users\Trilo\OneDrive\Desktop\FIT5136_S2_2019_77\FIT5136_S2_2019_77\PrimeEvents.java...
C:\Users\Trilo\OneDrive\Desktop\FIT5136_S2_2019_77\FIT5136_S2_2019_77\PrimeEvents.java:408: error: ';' expected
        String[] names = hallNames.toArray(new String[hallNames.size()])];
                                                                        ^
1 error
